--- a/BlogProject/templates/homepage.html
+++ b/BlogProject/templates/homepage.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}
+Home Page
+{% endblock %}
+
+{% block content %}
+    <h1>This is my Homepage</h1>
+    <p>This is my <a href="about/">About</a> page.</p>
+{% endblock %}
